--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "csv-parse": "^5.5.6",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
   },
   "scripts": {
     "start": "node server.js"
