--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "jobs-backend",
+  "version": "1.0.0",
+  "description": "Simple jobs API + importer",
   "type": "module",
-  "dependencies": {
-    "express": "^4.19.2",
-    "pg": "^8.11.5",
-    "csv-parse": "^5.5.6",
-    "node-fetch": "^3.3.2",
-    "dotenv": "^16.4.5"
-  },
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
-  }
+  },
+  "engines": {
+    "node": ">=18.17"
+  },
+  "dependencies": {
+    "csv-parse": "^5.5.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.5"
+  },
+  "license": "MIT"
 }
