--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "jobs-backend",
   "version": "1.0.0",
-  "description": "Simple jobs API + importer",
   "type": "module",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": ">=18.17"
+    "start": "node server.js",
+    "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
-    "csv-parse": "^5.5.6",
-    "dotenv": "^16.4.5",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "pg": "^8.11.5"
-  },
-  "license": "MIT"
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.12.0"
+  }
 }
